// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentItemsModel  does not filter content when SHOW_INACTIVE_CONTENT is true 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28Id%20eq%201%29%20or%20%28Id%20eq%202%29",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel defaults to filtering content 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel filters by content channel id 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28ContentChannelId%20eq%201%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29&%24orderby=StartDateTime%20desc",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItemsModel filters by content channel id 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel filters content when SHOW_INACTIVE_CONTENT is false 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed doesn't fetch if there aren't any persona ids 1`] = `
Array [
  Array [
    Object {
      "categoryId": 123,
    },
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed doesn't fetch if there aren't any persona ids 2`] = `Array []`;

exports[`ContentItemsModel getPersonaFeed fetches items from the Apollos plugin 1`] = `
Array [
  Array [
    Object {
      "categoryId": 123,
    },
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed fetches items from the Apollos plugin 2`] = `
Array [
  Array [
    "Apollos/ContentChannelItemsByDataViewGuids?guids=%2C&loadAttributes=expanded&%24filter=%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29&%24orderby=StartDateTime%20desc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed fetches items from the custom rock endpoint 1`] = `
Array [
  Array [
    Object {
      "categoryId": 123,
    },
  ],
]
`;

exports[`ContentItemsModel getPersonaFeed fetches items from the custom rock endpoint 2`] = `
Array [
  Array [
    "ContentChannelItems/GetFromPersonDataView?guids=%2C&loadAttributes=expanded&%24filter=%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29&%24orderby=StartDateTime%20desc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel getSermonFeed fetches items from a specific content channel 1`] = `
Array [
  Array [
    "TEST_ID",
  ],
]
`;

exports[`ContentItemsModel getSermonFeed fetches items from a specific content channel 2`] = `Promise {}`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20101%29%20or%20%28Id%20eq%20201%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent when using Apollos Plugin 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "Apollos/GetContentChannelItemsByIds?ids=101%2C201&loadAttributes=expanded&%24filter=%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding child content items of a provided parent when using Apollos Plugin 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20101%29%20or%20%28Id%20eq%20201%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child using the apollos plugin 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "Apollos/GetContentChannelItemsByIds?ids=101%2C201&loadAttributes=expanded&%24filter=%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding parent content items of a provided child using the apollos plugin 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=%28%28ContentChannelItemId%20eq%20101%29%29",
    Object {},
    Object {},
  ],
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item when using apollos plugin 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=%28%28ContentChannelItemId%20eq%20101%29%29",
    Object {},
    Object {},
  ],
  Array [
    "Apollos/GetContentChannelItemsByIds?ids=1%2C2&loadAttributes=expanded&%24filter=%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets a cursor finding sibling content items of a provided item when using apollos plugin 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets a percentage for a content series, based on different past interactions 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%20parent-channel-1",
      Object {},
      Object {
        "cacheOptions": Object {
          "ttl": 60,
        },
      },
    ],
    Array [
      "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20undefined%29%20or%20%28Id%20eq%20undefined%29%20or%20%28Id%20eq%20undefined%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
      Object {},
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel gets a percentage for a content series, based on different past interactions 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "actions": Array [
          "COMPLETE",
        ],
        "nodeIds": Array [
          "UniversalContentItem:4f68015ba18662a7409d1219a4ce013e",
          "UniversalContentItem:965b6e6d7046a885bea4e300b5c0400d",
          "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel gets a percentage for a content series, based on past interactions 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%20parent-channel-1",
      Object {},
      Object {
        "cacheOptions": Object {
          "ttl": 60,
        },
      },
    ],
    Array [
      "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20undefined%29%20or%20%28Id%20eq%20undefined%29%20or%20%28Id%20eq%20undefined%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
      Object {},
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel gets a percentage for a content series, based on past interactions 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "actions": Array [
          "COMPLETE",
        ],
        "nodeIds": Array [
          "UniversalContentItem:4f68015ba18662a7409d1219a4ce013e",
          "UniversalContentItem:965b6e6d7046a885bea4e300b5c0400d",
          "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel gets a percentage for a content series, even if a series has no children 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%20parent-channel-1",
      Object {},
      Object {
        "cacheOptions": Object {
          "ttl": 60,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel gets a percentage for a content series, even if a series has no children 2`] = `[MockFunction]`;

exports[`ContentItemsModel gets an empty array fpr series a user has viewed without a user: get from ids 1`] = `Array []`;

exports[`ContentItemsModel gets an empty array fpr series a user has viewed without a user: get percent complete 1`] = `Array []`;

exports[`ContentItemsModel gets an empty array fpr series a user has viewed without a user: result 1`] = `Array []`;

exports[`ContentItemsModel gets by id 1`] = `
Array [
  Array [
    "ContentChannelItems/1?loadAttributes=expanded",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets by id 2`] = `
Object {
  "id": 1,
}
`;

exports[`ContentItemsModel gets by ids 1`] = `
Array [
  Array [
    "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%201%29%20or%20%28Id%20eq%202%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets by ids 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets by ids using Apollos Plugin 1`] = `
Array [
  Array [
    "Apollos/GetContentChannelItemsByIds?ids=1%2C2&loadAttributes=expanded&%24filter=%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29",
    Object {},
    Object {},
  ],
]
`;

exports[`ContentItemsModel gets by ids using Apollos Plugin 2`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;

exports[`ContentItemsModel gets cover image from the cache, when it exists: Get mock calls 1`] = `
Array [
  Array [
    Object {
      "key": "contentItem:coverImage:123",
    },
  ],
]
`;

exports[`ContentItemsModel gets cover image from the cache, when it exists: Image result 1`] = `
Object {
  "__typename": "ImageMedia",
  "key": "image",
  "name": "Image",
  "sources": Array [
    Object {
      "uri": "https://some-domain.com/some/path/to/image.jpg",
    },
  ],
}
`;

exports[`ContentItemsModel gets series a user has viewed: get from ids 1`] = `
Array [
  Array [
    Array [
      "2",
      "3",
    ],
  ],
]
`;

exports[`ContentItemsModel gets series a user has viewed: get percent complete 1`] = `
Array [
  Array [
    Object {
      "id": "1",
    },
  ],
  Array [
    Object {
      "id": "2",
    },
  ],
  Array [
    Object {
      "id": "3",
    },
  ],
]
`;

exports[`ContentItemsModel gets series from specific channel a user has viewed: get from ids 1`] = `
Array [
  Array [
    Array [
      "2",
      "3",
    ],
  ],
]
`;

exports[`ContentItemsModel gets series from specific channel a user has viewed: get percent complete 1`] = `
Array [
  Array [
    Object {
      "id": "1",
    },
  ],
  Array [
    Object {
      "id": "2",
    },
  ],
  Array [
    Object {
      "id": "3",
    },
  ],
]
`;

exports[`ContentItemsModel gets the next item for a content series, based on different past interactions 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%20parent-channel-1",
      Object {},
      Object {
        "cacheOptions": Object {
          "ttl": 60,
        },
      },
    ],
    Array [
      "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20undefined%29%20or%20%28Id%20eq%20undefined%29%20or%20%28Id%20eq%20undefined%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
      Object {},
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel gets the next item for a content series, based on different past interactions 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "actions": Array [
          "COMPLETE",
        ],
        "nodeIds": Array [
          "UniversalContentItem:4f68015ba18662a7409d1219a4ce013e",
          "UniversalContentItem:965b6e6d7046a885bea4e300b5c0400d",
          "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel gets the next item for a content series, based on past interactions 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%20parent-channel-1",
      Object {},
      Object {
        "cacheOptions": Object {
          "ttl": 60,
        },
      },
    ],
    Array [
      "ContentChannelItems?loadAttributes=expanded&%24filter=%28%28Id%20eq%20undefined%29%20or%20%28Id%20eq%20undefined%29%20or%20%28Id%20eq%20undefined%29%29%20and%20%28%28%28%28StartDateTime%20lt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28StartDateTime%20eq%20null%29%29%20and%20%28%28ExpireDateTime%20gt%20datetime%272017-11-25T07%3A34%3A56%27%29%20or%20%28ExpireDateTime%20eq%20null%29%29%29%20and%20%28%28%28Status%20eq%20%27Approved%27%29%20or%20%28ContentChannel%2FRequiresApproval%20eq%20false%29%29%29%29&%24orderby=Order%20asc%2C%20StartDateTime%20asc",
      Object {},
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel gets the next item for a content series, based on past interactions 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "actions": Array [
          "COMPLETE",
        ],
        "nodeIds": Array [
          "UniversalContentItem:4f68015ba18662a7409d1219a4ce013e",
          "UniversalContentItem:965b6e6d7046a885bea4e300b5c0400d",
          "UniversalContentItem:559b23fd0aa90e81b1c023e72e230fa1",
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`ContentItemsModel isContentActiveLiveStream returns false if the livestream is innactive 1`] = `Array []`;

exports[`ContentItemsModel isContentActiveLiveStream returns false if the livestream is not the most recent sermon 1`] = `
Array [
  Array [],
]
`;

exports[`ContentItemsModel isContentActiveLiveStream returns true if the livestream is the most recent sermon 1`] = `
Array [
  Array [],
]
`;

exports[`ContentItemsModel returns a text feature when a contentItem has a TextFeature field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns a text feature when a contentItem has a TextFeature field 2`] = `
Array [
  Array [
    Object {
      "id": 123,
      "text": "something",
    },
  ],
]
`;

exports[`ContentItemsModel returns active livestream content when the LiveStream is live and there is a sermon 1`] = `
Array [
  Array [
    Object {
      "id": "1",
    },
  ],
]
`;

exports[`ContentItemsModel returns active livestream content when the LiveStream is live and there is a sermon 2`] = `
Array [
  Array [],
]
`;

exports[`ContentItemsModel returns an empty array LiveStream isn't live and there is a sermon 1`] = `Array []`;

exports[`ContentItemsModel returns an empty array LiveStream isn't live and there is a sermon 2`] = `Array []`;

exports[`ContentItemsModel returns an empty array when there are no child content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItemsModel returns an empty array when there are no features 1`] = `Array []`;

exports[`ContentItemsModel returns an empty array when there are no features 2`] = `Array []`;

exports[`ContentItemsModel returns an empty array when there are no parent content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItemsModel returns an empty array when there are no sibling content items 1`] = `
Array [
  Array [
    "ContentChannelItemAssociations?loadAttributes=expanded&%24filter=ChildContentChannelItemId%20eq%201",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`ContentItemsModel returns comment features when a contentItem has a Comments field set to true 1`] = `
Array [
  Object {
    "__typename": "AddCommentFeature",
    "addPrompt": "What stands out to you?",
    "id": "AddCommentFeature:123",
    "initialPrompt": "Write Something...",
  },
  Object {
    "__typename": "CommentListFeature",
    "comments": Array [],
    "id": "CommentListFeature:123",
  },
]
`;

exports[`ContentItemsModel returns comment features when a contentItem has a Comments field set to true 2`] = `
Array [
  Array [
    Object {
      "flagLimit": 0,
      "nodeId": "ContentItem:123Test",
      "nodeType": "UniversalContentItem",
    },
  ],
]
`;

exports[`ContentItemsModel returns comment features when a contentItem has a Comments field set to true 3`] = `
Array [
  Array [
    Object {
      "addPrompt": "What stands out to you?",
      "initialPrompt": "Write Something...",
      "nodeId": "ContentItem:123Test",
      "nodeType": "UniversalContentItem",
      "relatedNode": Object {
        "attributeValues": Object {
          "comments": Object {
            "id": 123,
            "value": "True",
          },
        },
        "attributes": Object {},
        "id": "ContentItem:123Test",
      },
    },
  ],
]
`;

exports[`ContentItemsModel returns features when a contentItem has a Features field 1`] = `
Array [
  Object {
    "id": "ScriptureFeature:123",
    "reference": "john 3",
  },
  Object {
    "body": "text feature",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns features when a contentItem has a Features field 2`] = `
Array [
  Array [
    Object {
      "id": "123-1",
      "text": "text feature",
    },
  ],
]
`;

exports[`ContentItemsModel returns features when a contentItem has a Features field 3`] = `
Array [
  Array [
    Object {
      "id": "123-0",
      "reference": "john 3",
      "version": undefined,
    },
  ],
]
`;

exports[`ContentItemsModel returns null when getting a percentage for a content series without a user 1`] = `[MockFunction]`;

exports[`ContentItemsModel returns null when getting a percentage for a content series without a user 2`] = `[MockFunction]`;

exports[`ContentItemsModel returns null when getting the next item based on past interactions without a user 1`] = `[MockFunction]`;

exports[`ContentItemsModel returns null when getting the next item based on past interactions without a user 2`] = `[MockFunction]`;

exports[`ContentItemsModel returns scripture features when a contentItem has a ScriptureFeatures field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "ScriptureFeature:123",
  },
  Object {
    "body": "something",
    "id": "ScriptureFeature:123",
  },
]
`;

exports[`ContentItemsModel returns scripture features when a contentItem has a ScriptureFeatures field 2`] = `
Array [
  Array [
    Object {
      "id": "123-0",
      "reference": "John 3:16",
    },
  ],
  Array [
    Object {
      "id": "123-1",
      "reference": "Mark 1:1",
    },
  ],
]
`;

exports[`ContentItemsModel returns scripture features with translation when a contentItem has a Features field: createScriptureFeature mock 1`] = `
Array [
  Array [
    Object {
      "id": "123-0",
      "reference": "John 3:16",
      "version": "esv",
    },
  ],
  Array [
    Object {
      "id": "123-1",
      "reference": "Mark 1:1",
      "version": undefined,
    },
  ],
]
`;

exports[`ContentItemsModel returns scripture features with translation when a contentItem has a Features field: result mock 1`] = `
Array [
  Object {
    "body": "something",
    "id": "ScriptureFeature:123",
  },
  Object {
    "body": "something",
    "id": "ScriptureFeature:123",
  },
]
`;

exports[`ContentItemsModel returns text features and when a contentItem has a TextFeatures and a TextFeature field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns text features and when a contentItem has a TextFeatures and a TextFeature field 2`] = `
Array [
  Array [
    Object {
      "id": 456,
      "text": "wow this is neat!",
    },
  ],
  Array [
    Object {
      "id": "123-0",
      "text": "something else",
    },
  ],
  Array [
    Object {
      "id": "123-1",
      "text": "that thing is cool",
    },
  ],
]
`;

exports[`ContentItemsModel returns text features when a contentItem has a TextFeatures field 1`] = `
Array [
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
  Object {
    "body": "something",
    "id": "TextFeature:123",
  },
]
`;

exports[`ContentItemsModel returns text features when a contentItem has a TextFeatures field 2`] = `
Array [
  Array [
    Object {
      "id": "123-0",
      "text": "something else",
    },
  ],
  Array [
    Object {
      "id": "123-1",
      "text": "that thing is cool",
    },
  ],
]
`;

exports[`ContentItemsModel stores cover image in the cache, when it exists 1`] = `
Object {
  "__typename": "ImageMedia",
  "key": "image",
  "name": "Image",
  "sources": Array [
    Object {
      "uri": "https://some-domain.com/some/path/to/image.jpg",
    },
  ],
}
`;

exports[`ContentItemsModel stores cover image in the cache, when it exists 2`] = `
Array [
  Array [
    Object {
      "data": Object {
        "__typename": "ImageMedia",
        "key": "image",
        "name": "Image",
        "sources": Array [
          Object {
            "uri": "https://some-domain.com/some/path/to/image.jpg",
          },
        ],
      },
      "key": "contentItem:coverImage:123",
    },
  ],
]
`;
